jwt token swagger
