# app/Http/Controllers/Controller.php
@@ -13,11 +13,11 @@ use Illuminate\Routing\Controller as BaseController;
 
 class Controller extends BaseController
 {
-     /**
+    /**
      * @OA\Info(
      *      version="1.0.0",
-     *      title="Laravel OpenApi Demo Documentation",
-     *      description="L5 Swagger OpenApi description",
+     *      title="Happy House API Documentation",
+     *      description="",
      *      @OA\Contact(
      *          email="admin@admin.com"
      *      ),
@@ -26,12 +26,15 @@ class Controller extends BaseController
      *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
      *      )
      * )
-     *
      * @OA\Server(
      *      url=L5_SWAGGER_CONST_HOST,
      *      description="Demo API Server"
      * )
-
+     * @OAS\SecurityScheme(
+     *      securityScheme="jwt_token",
+     *      type="http",
+     *      scheme="bearer"
+     * )
      *
      * @OA\Tag(
      *     name="Projects",
